issue #2276 - spacing

--- a/css/ccap-microbiology.css
+++ b/css/ccap-microbiology.css
@@ -4830,7 +4830,7 @@ div.appendix > div.column-container div.itemizedlist > ul.itemizedlist li {
 }
 div.appendix > div.column-container div.itemizedlist > ul.itemizedlist p {
   margin: 0px;
-  padding-bottom: 1em;
+  padding-bottom: 0.5em;
 }
 /* -------------------------
  * Equations
