--- a/css/refactor/microbiology-slots.less
+++ b/css/refactor/microbiology-slots.less
@@ -123,7 +123,7 @@
     #list-text {
       .style("column-container") {
         margin: 0px;
-        padding-bottom: 1em;
+        padding-bottom: 0.5em;
       }
     }
   }
